--- a/static/index.html
+++ b/static/index.html
@@ -23,17 +23,14 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <h1 id="hello-world">hello world.</h1>
-<p>welcome to your piece of the internet. <br />
-this is your sandbox.</p>
-<ul>
-<li><a href="#">🐢 Let&#39;s start slow.</a><p>Start with a general overview.</p></li>
-<li><a href="#">🛠 Show me how it&#39;s done.</a><p>Dive right into the content with this guide.</p></li>
-<li><a href="#">💅 Make it sassy.</a><p>Start building SASS modules.</p></li>
-<li><a href="#">💪 Harder. Better. Faster. Stronger.</a><p>Customize it and make it more robust by adding anything from custom scripts to automation and generators.</p></li>
-<li><a href="#">🚀 Ship it.</a><p>Playing in the sandbox is cool, but here's how to put your stuff in the wild.</p>
-</li>
-</ul>
+        <p><a href="#">This is a link.</a>
+<br />
+This is an icon: <svg class="css-icon" focusable="false" tabindex="-1"><use href="#external-link"></use></svg>
+<br />
+<a href="#">This is a link with an icon. <svg class="css-icon" focusable="false" tabindex="-1"><use href="#external-link"></use></svg></a></p>
+<svg>
+  <symbol id="external-link" viewBox="0 0 24 24"><path d="M10,5a1,1,0,0,1,0,2H2V22H17V15a1,1,0,0,1,2,0v7a2,2,0,0,1-2,2H2a2,2,0,0,1-2-2V7A2,2,0,0,1,2,5ZM22,3.61l-6.6,6.6a1,1,0,0,1-1.41,0,1,1,0,0,1,0-1.42L20.78,2H18a1,1,0,0,1,0-2h5a1,1,0,0,1,1,1V6a1,1,0,0,1-2,0Z"></path></symbol>
+</svg>
 
       </div>
     </div>
